[project]
name = "mlx-whisper-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.1.0",
    "mlx-whisper>=0.3.0",
]

[tool.uv]
package = false
constraint-dependencies = [
    # To avoid installation error with numba==0.53.1
    "numba~=0.60.0",
]
